- Add process ID (PID) and thread ID (TID) as attributes on program
  begin or thread creation events respectivly.
- Record node-level unique identifiers for NVIDIA and AMD GPUs as
  CUDA and OpenCL location properties to separate devices in a
  multi-GPU environment.
- A new mutex implementation based on atomic intrinsics replaces all
  existing mutex implementations.

User tools and API improvements and changes:

- Remove the configure option `--with-extra-instrumentation-flags`.
  It was introduced to work around GCC compiler instrumentation issues
  that vanished with the advent of the recommended GCC compiler
  instrumentation plug-in.
- Remove the instrumenter option `--config=<file>` as it was
  considered of little use.
- Add ability to generate an initial filter file with optional
  control parameters using buffer values, visits and region types.
  This includes the ability to iteratively refine the generated filter
  file using existing filters.
- Compile-time filtering via `scorep --instrument-filter` is now
  also available for builds using Intel compilers.
- Add additional `scorep-score` sorting modes `name`, `totaltime`,
  `timepervisit`, and `visits`, besides the default `maxbuffer`.
  Select a sorting mode via `-s <mode>`.
- Remove the `scorep` and `scorep-config` option `--mutex` due to
  changes in the mutex implementation, see above.
- Allow to build against the `libcuda.so` stubs library from the
  CUDA SDK. Specify `--with-libcuda-lib=<cuda-sdk>/lib64/stubs` when
  configuring. At runtime the `libcuda.so` library must be found by
  the system-library path though.

Bugfixes:

- Support changed BFD API. Changes introduced by binutils-2.34.
- Fix aborts when user library wrapper were first called in a thread
  parallel context.
- Unify and fix representation of artificial root nodes for threads,
  GPU kernels, and OpenMP tasks in profiling.
- Allocation metrics were lost on MPI RMA window allocation functions.